# icing

./: LICENSE.md  README.md
client/: .gitignore  default.nix  package.json  shell.nix  tsconfig.json  webpack.config.js
client/nix/: sources.json
client/src/: action.ts  dispatcher.ts  haskell.ts  index.css  index.html  index.ts  monaco-editor-textmate.ts  operation.ts  prolog.ts  xterm.css
client/static/: haskell.tmLanguage.json
server/: .gitignore  cabal.project  default.nix  icing-server.cabal
server/app/: Main.hs
server/nix/: sources.json
server/src/: Icing.hs
server/src/Icing/: API.hs  Client.hs  Haskell.hs  Message.hs  Operation.hs  Prolog.hs  State.hs
